--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.4.0",
+    "@contentful/rich-text-types": "^15.3.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-tailwind/react": "^0.3.4",
     "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
     "contentful": "^9.1.3",
     "next": "11.1.2",
